objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Work_Order__c</fullName>
        <label>Associated Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Project</label>
        <referenceTo>ServiceProject__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <description>Symptom noticed on the Installation.</description>
        <inlineHelpText>Symptom noticed on the Installation.</inlineHelpText>
        <label>Symptom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Symptoms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptoms_rootCause__c</fullName>
        <description>Italy: field using Root Cause global value set</description>
        <label>Symptoms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DEF_RootCause</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISSUE</fullName>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>WORK_PERFORMED</fullName>
                    <label>Work Performed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkPerformed__c</fullName>
        <label>Work Performed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Performed__c</fullName>
        <label>Type of Work Performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DEF_WorkPerformed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Performed_by_Installer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Performed by Installer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>